<resources>
    <string name="app_name">Kershy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up"> <u>Sign up</u></string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps">Map</string>
    <string name="text_label">\"Password should be more than 6 letters\"</string>
    <string name="d">s</string>
    <string name="bill_details">Bill Details</string>
    <string name="click_to_calculate_price">Click to calculate price</string>
    <string name="time">Time</string>
    <string name="item_total">Item Total</string>
    <string name="restaurant_tax">Restaurant Tax</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="offer_off">Offer OFF</string>
    <string name="to_pay">To Pay</string>
    <string name="apply">APPLY</string>
    <string name="my_profile">My Profile</string>
    <string name="offers">Offers</string>
    <string name="burger">Burger</string>
    <string name="sweet">Sweet</string>
    <string name="my_order">My Order</string>
    <string name="delivery">Delivery</string>
    <string name="drink">Drink</string>
    <string name="categories">Categories</string>
    <string name="personal_information">Personal Information</string>
    <string name="number_phone">number phone</string>
    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="kershy_burger">Kershy Burger</string>
    <string name="ratings">Ratings</string>
    <string name="minutes_delivery_time">Minutes (Delivery time)</string>
    <string name="follow_your_order">Follow your order...</string>
    <string name="rate_restaurant">Rate Restaurant</string>
    <string name="Your_order_is_written">Your order is written</string>
    <string name="Your_order_is_preparing">Your order is preparing</string>
    <string name="Your_order_is_on_the_way">Your order is on the way</string>
    <string name="Your_order_is_delivered">Your order is delivered</string>
    <string name="please_wait">Please! Wait</string>
    <string name="kershy_drink">Kershy Drink</string>
    <string name="my_orders">My Orders</string>
    <string name="total_price">Total Price</string>
    <string name="name_profile">Name :</string>
    <string name="user_name">User Name</string>
    <string name="email_profile">Email :</string>
    <string name="address_profile">Address :</string>
    <string name="phone_profile">Phone :</string>
    <string name="kershy_sweet">Kershy Sweet</string>
    <string name="food_name">food name</string>
    <string name="show_more"><![CDATA[Show more >]]></string>
    <string name="old_price">Old Price</string>
    <string name="price_after_offer">Price after offer</string>
    <string name="price">Price</string>
    <string name="login">LogIn</string>
    <string name="remember_me">Remember me!</string>
    <string name="not_yet_a_member">Not yet a member,</string>
    <string name="share_application">Share Application</string>
    <string name="logout">LogOut</string>
    <string name="Uploading">Uploading...</string>
    <string name="Error">Error</string>
    <string name="Please_Choose_image">Please! Choose image!</string>
    <string name="enterName">Please Enter Your Name</string>
    <string name="enterAddress">Please Enter Your Address</string>
    <string name="updateIsDone">Update is done</string>
    <string name="gpsIsTurnedOn">GPS is turning on.</string>
    <string name="Your_GPS_seems_to_be_disabled_do_you_want_to_enable_it">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enterPhone">Please Enter Your Phone</string>
    <string name="enterEmail">Please Enter Your Email</string>
    <string name="enterPassword">Please Enter Your Password</string>
    <string name="passMore6">Password should be more than 6 letters</string>
    <string name="logSuccess">LogIn success</string>
    <string name="logFailed">LogIn failed</string>
    <string name="wait">Done</string>
    <string name="closeAppandOpen">Please! Close App and open it again.</string>
    <string name="iamhere">I am here</string>
    <string name="Authenticationsuccess">Authentication success.</string>
    <string name="AuthenticationFailed">Authentication failed.</string>
    <string name="checked">Checked</string>
    <string name="Unchecked">Unchecked</string>
    <string name="EmailSent">"We have sent you instructions to reset your password!"</string>
    <string name="Failed_send_email">Failed to send reset email!</string>
    <string name="reset_password">FORGOT PASSWORD?</string>
    <string name="chooseOrder">Please! Choose Order.</string>
    <string name="language">Language</string>
    <string name="choose_language">Choose Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="kershy_cart">Kershy Cart</string>
    <string name="reset_pass">Reset Password</string>
    <string name="PleaseWait">Plesae Wait</string>
    <string name="haveAccount">" You don't have account! Please Create account and comeback to logIn"</string>
    <string name="waitsignup">Sign up</string>
    <string name="waitlogin">Log in..</string>
    <string name="save">Save</string>
    <string name="success">Success</string>
</resources>
