<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_image_burger_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#2A2A32"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:elevation="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/image_burger_item_offer"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="center"
                    android:src="@drawable/burger" />
                <TextView
                    android:id="@+id/name_burger_item_offer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/food_name"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textColor="#fff"
                    android:layout_margin="10dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/old_price"
                        android:textStyle="bold"
                        android:textAllCaps="false"
                        android:layout_gravity="start"
                        android:gravity="center|start"
                        android:layout_weight="8"
                        android:textSize="16sp"
                        android:textColor="#959599"/>
                    <TextView
                        android:id="@+id/oldPrice_burger_item_offer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="25 LE"
                        android:paddingEnd="5dp"
                        android:textStyle="bold"
                        android:layout_gravity="end"
                        android:gravity="center|end"
                        android:textAllCaps="false"
                        android:textSize="16sp"
                        android:textColor="#959599"
                       />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="15dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price_after_offer"
                        android:textStyle="bold"
                        android:textAllCaps="false"
                        android:layout_weight="8"
                        android:layout_gravity="start"
                        android:gravity="center|start"
                        android:textSize="16sp"
                        android:textColor="#959599"/>
                    <TextView
                        android:id="@+id/newPrice_burger_item_offer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="20 LE"
                        android:layout_gravity="end"
                        android:gravity="center|end"
                        android:paddingEnd="5dp"
                        android:textStyle="bold"
                        android:textAllCaps="false"
                        android:textSize="16sp"
                        android:textColor="#959599"
                       />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</LinearLayout>