<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center|center_horizontal"
        android:background="#19191B"
        android:gravity="center|center_horizontal"
        android:orientation="vertical"
        tools:context="view.ui.Drink.DrinkFragment">

        <View
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@drawable/cola" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="100dp"
                android:layout_marginRight="20dp"
                android:elevation="20dp"
                app:cardBackgroundColor="#2A2A32"
                app:cardCornerRadius="12dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/kershy_drink"
                        android:textAllCaps="false"
                        android:layout_weight="1"
                        android:textColor="#fff"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_star_24"
                            android:drawablePadding="8dp"
                            android:text="4.5"
                            android:textAllCaps="false"
                            android:textColor="#959599"
                            android:textSize="18sp"
                            android:textStyle="normal" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginBottom="4dp"
                            android:text="@string/ratings"
                            android:textAllCaps="false"
                            android:textColor="#959599"
                            android:textSize="18sp"
                            android:textStyle="normal" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView_timeDelivery"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_time_24"
                            android:drawablePadding="8dp"
                            android:text="45"
                            android:textAllCaps="false"
                            android:textColor="#959599"
                            android:textSize="18sp"
                            android:textStyle="normal" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginBottom="4dp"
                            android:text="@string/minutes_delivery_time"
                            android:textAllCaps="false"
                            android:textColor="#959599"
                            android:textSize="18sp"
                            android:textStyle="normal" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <ProgressBar
                android:id="@+id/prgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_marginTop="20dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_drink"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>
