<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/f"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2A2A32"
    tools:context="view.ui.Orders.OrdersFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/c"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="0dp"
                android:elevation="12dp"
                app:cardBackgroundColor="#00CB2C"
                app:cardCornerRadius="25dp"
                app:cardElevation="12dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:elevation="12dp"
                    app:cardBackgroundColor="#19191B"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView_expanded"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="4dp"
                            android:gravity="center"
                            android:text="@string/my_orders"
                            android:textAllCaps="false"
                            android:textColor="#fff"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_gravity="left"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="#909090" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerView_order"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/c"
                android:layout_gravity="bottom"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/c"
                android:elevation="12dp"
                android:layout_alignParentBottom="true"
                app:cardBackgroundColor="#00CB2C"
                app:cardCornerRadius="25dp"
                app:cardElevation="12dp">
                <androidx.cardview.widget.CardView
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="3dp"
                    android:elevation="12dp"
                    app:cardBackgroundColor="#19191B"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center|start"
                                android:layout_marginStart="30dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="5dp"
                                android:layout_weight="1"
                                android:text="@string/time"
                                android:textColor="#959599"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/textView_date_order"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end|center"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="5dp"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:paddingEnd="30dp"
                                android:text="18-6-2020, 07:10 AM"
                                android:textAllCaps="false"
                                android:textColor="#959599"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center|start"
                                android:layout_marginStart="30dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="5dp"
                                android:layout_weight="1"
                                android:text="@string/item_total"
                                android:textColor="#959599"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/textView_cart_itemTotal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end|center"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="5dp"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:paddingEnd="30dp"
                                android:text="0"
                                android:textColor="#fff"
                                android:textSize="14sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center|start"
                                android:layout_marginStart="30dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="5dp"
                                android:layout_weight="1"
                                android:text="@string/restaurant_tax"
                                android:textColor="#959599"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/textView_cart_tax"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end|center"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="5dp"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:paddingEnd="30dp"
                                android:text="0"
                                android:textColor="#fff"
                                android:textSize="14sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center|start"
                                android:layout_marginStart="30dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="5dp"
                                android:layout_weight="1"
                                android:text="@string/delivery_fee"
                                android:textColor="#959599"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/textView_cart_deliveryFee"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end|center"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="5dp"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:paddingEnd="30dp"
                                android:text="0"
                                android:textColor="#fff"
                                android:textSize="14sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center|start"
                                android:layout_marginStart="30dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="5dp"
                                android:layout_weight="1"
                                android:text="@string/offer_off"
                                android:textColor="#959599"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/textView_cart_offer"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end|center"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="5dp"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:paddingEnd="30dp"
                                android:text="0"
                                android:textColor="#fff"
                                android:textSize="14sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginBottom="10dp"
                            android:background="#55555C" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center|start"
                                android:layout_marginStart="30dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="5dp"
                                android:layout_weight="1"
                                android:text="@string/total_price"
                                android:textColor="#fff"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/textView_cart_totalPrice"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end|center"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="5dp"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:paddingEnd="30dp"
                                android:text="40.5 LE"
                                android:textColor="#fff"
                                android:textSize="14sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>